Added assets and updated the contact page to have a contact page.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,12 +1,10 @@
 body{
-  background-color: black; 
   font-family: 'Montserrat';
   margin: 0;
   min-height: 100vh; 
   background: linear-gradient(to top, #162952, black);
   color: white;
 }
-
 
 h1{
   font-size: 48px;
@@ -86,9 +84,7 @@ button:hover{
 
 .box{
   margin-top: 5%; 
-  min-width: 100vw; 
-  height: 100px; 
-  background: #5A8ED1; 
+  height: 500px; 
   background: rgba(90, 142, 209, 0.1);
   padding: 1%;
 }
@@ -100,16 +96,54 @@ h3{
   margin-top: 0;
 }
 
+h5{
+  text-align: center;
+  margin:1%; 
+}
+
+h6{
+  text-align: center;
+}
+
+my-school{
+  color: #0074c8;
+  display: inline-block;
+}
+
+code{
+  white-space: pre-wrap;
+  display: block; 
+  word-break: break-word; 
+  margin: 1%; 
+  font-family: 'JetBrains Mono';
+  background-color: #2C343A;
+}
+
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid white;
+}
+
 .card{
   background: rgba(217, 217, 217, 0.2);
   border-radius: 10px; 
   width: 20vw;
-  margin: 1%; 
+  margin: 1%;
 }
 
 #cards{
   display: flex; 
-  justify-content: center; 
+  justify-content: center;
+}
+
+#testimonial{
+  padding: 2%;
+  font-size: 18px;
+  margin-top: 0; 
+  background: transparent; 
+  color: #12C1F2; 
+  text-decoration: underline;
 }
 
 p{
@@ -118,12 +152,38 @@ p{
 }
 
 footer{
-  background: #1F3B6F;
-  height: 100px; 
+  background-color: #020714;
+  padding: 2rem;
 }
 
 /* Progress bar*/
 #bar::-webkit-progress-bar {
   background-color: #12C1F2;
   border-radius: 10px;
+}
+
+form#contactForm {
+  min-width: 50%;
+  margin: 3% auto;
+  padding: 2.5%;
+  border-radius: 10px;
+  background-color: rgba(90, 142, 209, 0.1);
+}
+
+form#contactForm label{
+  display: block;
+  margin-top: 2%;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+form#contactForm button {
+  width: 100%;
+  font-size: 16px;
+  padding: 3%; 
+  margin-top: 2.5%;
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  display: block; 
 }
