--- a/docs/styles.css
+++ b/docs/styles.css
@@ -188,46 +188,25 @@ form#contactForm button {
   display: block; 
 }
 
-summary{
-  display: flex; 
-  justify-content: center;
-}
-
-section{
-  display: block;
-}
-
-figure{
-  display: block;
-  margin: auto; 
-}
-
-table {   
-  margin: 2%;
-  display: block;
-}
-
-th, td {
-  border: 1px solid #ccc; 
-  padding: 2%; 
+#prod {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  gap: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-meter, #pop{
-  display: block;  
-  /*justify-content: center;*/
+figure {
+  margin: 0;
+}
+
+summary, table {
+  margin: 0 auto;
+}
+
+meter, #pop {
+  display: block;
   margin: auto;
-  color: white; 
-}
-
-article{
-  text-align: center; 
-  margin: 2%; 
-  max-width: 600px; 
-}
-
-#prod{
-  display: block;
-  jsutify-content: center; 
-  text-align: center;
 }
